update system files, services. new algorithms with the protection against failed sensor events

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,8 +42,8 @@
             <td class="tbl-edit tbl-button">Edit</td>
             <td class="tbl-delete tbl-button">Delete</td>
         </thead>
-        <tr data-id="{a Job.idx a}' }}" ng-repeat="Job in jobs">
-            <td><input type="checkbox" ng-true-value="'on'" ng-false-value="'off'" ng-model="Job.enabled"></td>
+        <tr data-id="{a Job.idx a}" ng-repeat="Job in jobs">
+            <td><input type="checkbox" ng-true-value="'on'" ng-false-value="'off'" ng-model="Job.enabled" ng-click="saveJob(Job)"></td>
             <td>{a Job.hour a}:{a Job.minute a} </td>
             <td>{a Job.description a}</td>
             <td><input type="button" ng-click="editJob(Job)" value="Edit"/></td>
